# osc_clock

./: .gitignore  Cargo.toml  README.md  config.json
.cargo/: config.toml
docs/: docusaurus.config.js  package-lock.json
docs/docs/: welcome.md
docs/docs/creators/: about_distribute.md  about_prefabs_in_Resources.md  get_started.md  parameters.md
docs/docs/users/: client_config_breakdown.md  sample_asset.md  trouble_shooting.md
docs/src/components/HomepageFeatures/: index.js
docs/src/css/: custom.css
docs/src/pages/: index.js  index.module.css
locales/: en.json  ja.json  ja_Kansai.json
orders/: orders_handler-test.json  orders_osc-clock.json
scripts/: watch-icons.mjs
scripts/icon-generator/: Cargo.toml
scripts/icon-generator/src/: main.rs
src/: arg.rs  config.rs  legacy.rs  main.rs  message.rs  order.rs  osc_query.rs  receiver.rs  recovery.rs  sender.rs  unit.rs
