
[workspace]
members = [
    "packages/core",
    "packages/shared",
    "packages/app/src-tauri",
    "packages/build-utils",
    "scripts/icon-generator",
]
resolver = "2"

# Default member for root commands
default-members = ["packages/app/src-tauri"]

[workspace.package]
version = "3.0.0"
edition = "2021"
authors = ["nekochanfood (nekochanfood@gmail.com)"]

[workspace.dependencies]
vrchat_osc = "1.1"
tokio = { version = "1", features = ["full"] }
rosc = "0.11"
once_cell = "1.19"
fake = "2.6"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-i18n = "2"
bitflags = { version = "2", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }

