[package]
name = "osc_clock"
version = "2.0.0"
edition = "2021"

description = "Send date and time to VRChat via OSC"

authors = ["nekochanfood (nekochanfood@gmail.com)"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vrchat_osc = "2.0"
tokio = { version = "1", features = ["full"] }
once_cell = "1.19"
fake = "2.6"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-i18n = "2"
bitflags = { version = "2", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }